--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
-<html>
-    <head>
-        <title>NAN</title>
-    </head>
-    <body>
-        <H1>NAN</H1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Neama Abdulaziz</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="Semantic web, Machine Learning, Ubiquitous Computing, Data Science, Web Services, Software Analysis & development">
+    <meta name="author" content="Neama Abdulaziz">
+    <link rel="sylesheet" href="css/style.css">
+</head>
+
+<body>
+    <header>
+        
+    </header>
+</body>
+
 </html>
