--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="Semantic web, Machine Learning, Ubiquitous Computing, Data Science, Web Services, Software Analysis & development">
     <meta name="author" content="Neama Abdulaziz">
-    <link rel="sylesheet" href="css/style.css">
+    <link rel="sylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header>
-        
-    </header>
+    <h1 class="hack">I'm a HACKER</h1>
 </body>
 
 </html>
