--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="Semantic web, Machine Learning, Ubiquitous Computing, Data Science, Web Services, Software Analysis & development">
     <meta name="author" content="Neama Abdulaziz">
-    <link rel="sylesheet" href="./css/style.css">
+    <link rel="sylesheet" href="css/style.css" media="screen, projection" type="text/css" />
+    <script rel="sylesheet" href="css/style.css" media="screen, projection" type="text/css" ></script>
 </head>
 
-<body>
-    <h1 class="hack">I'm a HACKER</h1>
+<body class="body">
+    <h1 class="hack">Neama Abdulaziz</h1>
 </body>
 
 </html>
