--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Neama Abdulaziz Dahan - Portfolio</title>
     <meta name="description" content="Data Analyst, Software Engineer, AI specialist, Teacher, and Researcher">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="favicon" type="image/png" sizes="180x180" href="./favicon.png">
+    <link rel="icon" sizes="180x180" href="./favicon.png">
     <link rel="stylesheet" href="./css/bootstrap-custom.css">
     <link rel="stylesheet" href="./css/ionicons.min.css">
     <link rel="stylesheet" href="./css/tiny-slider.css">
