--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center">
                 <div class="col-12 col-lg-8 home-content text-center">
-                    <h1 class="home-name">Neama <span>Abdulaziz</span></h1>
+                    <h1 class="home-name">Neama <span>Abdulaziz</span> <span>Dahan</span> </h1>
                     <h4 class="cd-headline clip home-headline">I’m
                         <span class="cd-words-wrapper single-headline" style="width: 174.722px;">
                           <b class="is-visible">a Teacher</b>
@@ -105,7 +105,7 @@
                                                     <div class="col-12 col-lg-7 info-content">
                                                         <div class="content-block">
                                                             <h2 class="content-subtitle">Who am I?</h2>
-                                                            <h6 class="content-title">I'm Neama Abdulaziz, an Academic Teacher and a Developer</h6>
+                                                            <h6 class="content-title">I'm Neama Abdulaziz Dahan, an Academic Teacher and a Developer</h6>
                                                             <div class="content-description">
                                                                 <p>I am a lecturer, researcher, (systems and data) analyst, (systems and database) supervisioner, full-stack developer at the Faculty of Computer and Information Technology - Sana'a University.
                                                                     I hold a Master's degree in Computer Science and have been working as an academic teacher since 2012. I teach a variety of Computer and Technology courses and support students’ educational
