--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center">
                 <div class="col-12 col-lg-8 home-content text-center">
-                    <h1 class="home-name">Neama <span>Abdulaziz</span> <span>Dahan</span> </h1>
+                    <h1 class="home-name">Neama <span>Abdulaziz</span></h1>
                     <h4 class="cd-headline clip home-headline">I’m
                         <span class="cd-words-wrapper single-headline" style="width: 174.722px;">
                           <b class="is-visible">a Teacher</b>
