--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                           <!--b class="is-hidden">PhD Scholar</b-->
                           <b class="is-hidden">a Researcher</b>
                           <b class="is-hidden">an Analyst</b>
-                          <b class="is-hidden">a supervisioner</b>
+                          <b class="is-hidden">a supervisor</b>
                           <b class="is-hidden">a Developer</b>
                           <b class="is-hidden">a Freelancer</b>
                         </span>
