--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="col-12 col-lg-8 home-content text-center">
                     <h1 class="home-name">Neama <span>Abdulaziz</span></h1>
                     <h4 class="cd-headline clip home-headline">I’m
-                        <span class="cd-words-wrapper single-headline" style="width: 174.722px;">
+                        <span class="cd-words-wrapper single-headline" style="width: 174.722px; color: #f8dddd;">
                           <b class="is-visible">a Teacher</b>
                           <!--b class="is-hidden">PhD Scholar</b-->
                           <b class="is-hidden">a Researcher</b>
