--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                                                             <h2 class="content-subtitle">Who am I?</h2>
                                                             <h6 class="content-title">I'm Neama Abdulaziz Dahan, an Academic Teacher and a Developer</h6>
                                                             <div class="content-description">
-                                                                <p>I am a lecturer, researcher, (systems and data) analyst, (systems and database) supervisor, full-stack developer at the Faculty of Computer and Information Technology - Sana'a University.
+                                                                <p>I am a lecturer, researcher, (systems and data) analyst, (systems and database) supervisor, full-stack developer, and a freelancer. I worked as a teacher at the Faculty of Computer and Information Technology - Sana'a University for ten years and I also did some other duties includeing systems analsis, syllabus preparations and studnets' marks auditing.
                                                                     I hold a Master's degree in Computer Science and have been working as an academic teacher since 2012. I teach a variety of Computer and Technology courses and support students’ educational
                                                                     development in different ways. I have worked extensively on different types of projects (over 430 projects), either as a supervisor or as a team member. In my research, I am interested
-                                                                    in providing solutions for the most tedious or complex problems. I also worked as an Oracle DBA administrator because although it may be stressful, it is my passion to solve problems.
+                                                                    in providing solutions for the most tedious or complex problems. I also worked as an Oracle DBA administrator. Although it is stressful, it is my passion to solve problems.
                                                                     Freelancing has expanded my mind and helped me get more experience. I have so many ideas too and I am working on some of them nowadays in my free time.</p>
                                                             </div>
                                                             <div class="d-block d-sm-flex align-items-center">
